# finer

./: .env.example.asr  .gitignore  2026-05-09-195610-this-session-is-being-continued-from-a-previous-c.txt  2026-05-09-195825-this-session-is-being-continued-from-a-previous-c.txt  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  architecture_review.md  download.html  implementation_plan.md  llms.txt  pyproject.toml  pytest.ini  run_test.sh  test_quick.py  test_schema_unification.py  test_storage.py  verify.py  verify_final.py  verify_simple.py
.github/: PULL_REQUEST_TEMPLATE.md
configs/: feishu.yaml.example  finance_skills.yaml  ml_models.yaml  security.yaml.example  wechat.yaml
dashboard/: 2026-04-20-194124-finer.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG-2026-04-27.md  FEATURES.md  GETTING_STARTED.md  MIMO_ORBIT_APPLICATION.md  agent-execution-plan.md  architecture-alignment-plan.md  architecture-planning.md  architecture-v2-migration-map.md  claude-handoff-review-2026-05-26.md  dpo-training-examples.md  dpo-training-guide.md  ml-roadmap.md  multi-agent-execution-report.md  multi-agent-next-round-plan.md  v0-v1-next-round-plan.md  v0-v1-schema-contract-validation-report.md
examples/: finance_skills_examples.py  sentiment_fusion_example.py
scripts/: b1_diagnostic_run.py  backfill_vision.py  card5_acceptance.py  card7_feishu_real_f5_run.py  card8_f3_model_comparison.py  card9_connectivity_probe.py  eval_compare.py  explore_mcp.py  fetch_reports.py  generate_agent_task_card.py  harvest_rejected.py  (+30 more)
(+663 files in other folders)
