[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finer"
version = "0.1.0"
description = "Pipeline skeleton for creator-content investment event research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.111.0",
  "uvicorn>=0.23.0",
  "python-multipart>=0.0.6",
  "PyYAML>=6.0",
  "dashscope>=1.14.0",
  "pydantic>=2.0.0",
  "snownlp>=0.12.3",
  "openai>=1.0.0",
  "instructor>=1.0.0",
  "cryptography>=41.0.0",
  "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "numpy>=1.26.0",
  "pandas>=2.0.0",
]
market-data = [
  "tushare>=1.4",
  "duckdb>=1.0",
  "pyarrow>=15.0",
]

[project.scripts]
finer = "finer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
